--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jeremyling/react-material-ui-horizontal-scroll-list",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "scripts": {
     "start": "react-scripts start",
     "build": "NODE_ENV=production && rm -rf dist && mkdir dist && npx babel src --out-dir dist --copy-files",
@@ -40,9 +40,7 @@
     "url": "git+https://github.com/jzcling/react-material-ui-horizontal-scroll-list.git"
   },
   "keywords": [
-    "form",
-    "builder",
-    "form builder",
+    "horizontal scroll",
     "material ui",
     "react"
   ],
