--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jeremyling/react-material-ui-horizontal-scroll-list",
-  "version": "0.1.3",
+  "version": "0.1.5",
   "scripts": {
     "start": "react-scripts start",
     "build": "NODE_ENV=production && rm -rf dist && mkdir dist && npx babel src --out-dir dist --copy-files",
@@ -32,7 +32,8 @@
     "presets": [
       "react",
       "env",
-      "stage-2"
+      "stage-2",
+      "minify"
     ]
   },
   "repository": {
@@ -53,6 +54,7 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
+    "babel-preset-minify": "^0.5.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "react": "^17.0.1",
@@ -66,6 +68,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "react-router-dom": "^5.2.0"
   }
 }
