--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jeremyling/react-material-ui-horizontal-scroll-list",
-  "version": "0.1.7",
+  "version": "0.1.8",
   "scripts": {
     "start": "react-scripts start",
     "build": "NODE_ENV=production && rm -rf dist && mkdir dist && npx babel src --out-dir dist --copy-files",
@@ -59,16 +59,19 @@
     "babel-preset-stage-2": "^6.24.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "^4.0.3"
-  },
-  "peerDependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
-  },
-  "dependencies": {
+    "react-scripts": "^4.0.3",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "lodash": "^4.17.21",
     "react-router-dom": "^5.2.0"
-  }
+  },
+  "peerDependencies": {
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "lodash": "^4.17.21",
+    "react-router-dom": "^5.2.0"
+  },
+  "dependencies": {}
 }
